# internal/handler/user/get_user_project_list_handler.go
@@ -1,0 +1,26 @@
+package user
+
+import (
+	"net/http"
+
+	"github.com/colinrs/protohub/pkg/httpy"
+
+	"github.com/colinrs/protohub/internal/logic/user"
+	"github.com/colinrs/protohub/internal/svc"
+	"github.com/colinrs/protohub/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func GetUserProjectListHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UserProjectListRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpy.ResultCtx(r, w, nil, err)
+			return
+		}
+
+		l := user.NewGetUserProjectListLogic(r.Context(), svcCtx)
+		resp, err := l.GetUserProjectList(&req)
+		httpy.ResultCtx(r, w, resp, err)
+	}
+}
