# swagger/protohub.json
@@ -648,6 +648,50 @@
         ]
       }
     },
+    "/api/v1/user/project/list": {
+      "get": {
+        "operationId": "getUserProjectList",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/UserListResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "1"
+          },
+          {
+            "name": "page_size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "10"
+          },
+          {
+            "name": "user_id",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "uint32"
+          }
+        ],
+        "tags": [
+          "user"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
     "/api/v1/user/refresh_token": {
       "get": {
         "operationId": "refreshToken",
@@ -1620,6 +1664,80 @@
         }
       },
       "title": "UserListResponse",
+      "required": [
+        "total",
+        "list"
+      ]
+    },
+    "UserProjectListData": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "uint32"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "remark": {
+          "type": "string"
+        },
+        "sort": {
+          "type": "integer",
+          "format": "int32"
+        }
+      },
+      "title": "UserProjectListData",
+      "required": [
+        "id",
+        "status",
+        "name",
+        "remark",
+        "sort"
+      ]
+    },
+    "UserProjectListRequest": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32",
+          "default": "1"
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "default": "10"
+        },
+        "user_id": {
+          "type": "integer",
+          "format": "uint32"
+        }
+      },
+      "title": "UserProjectListRequest",
+      "required": [
+        "user_id"
+      ]
+    },
+    "UserProjectListResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "list": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/UserProjectListData"
+          }
+        }
+      },
+      "title": "UserProjectListResponse",
       "required": [
         "total",
         "list"
